# quantum-engine

./: .gitignore  Cargo.toml  LICENSE  Readme-en.md  Readme.md
core/: Cargo.toml
core/src/: lib.rs
core/src/controller/: interface.rs
core/src/dispatch/: common.rs  general.rs  interface.rs  loop.rs  mod.rs  service.rs
core/src/dispatch/logic/: mod.rs
core/src/engine/: cron.rs  initialize.rs  kernel.rs  mod.rs  supervisor.rs  thread.rs
core/src/environment/: check.rs  interface.rs  java.rs  mod.rs
core/src/exception/: flow.rs  mod.rs  node.rs
core/src/expr/: interface.rs
core/src/extension/: core.rs  mod.rs
core/src/extension/agent/: interface.rs
core/src/extension/exec/: interface.rs
core/src/extension/service/: interface.rs
core/src/flow/: interface.rs  mod.rs
core/src/flow/exec/: flow.rs  node.rs
core/src/flow/resolver/: flow.rs  interface.rs
core/src/handler/: interface.rs
core/src/handler/core/: debug.rs  flow.rs  interface.rs  variable.rs
core/src/handler/core/service/: interface.rs
core/src/handler/files/: interface.rs
core/src/handler/files/common/: operation.rs
core/src/handler/files/dir/: interface.rs
core/src/handler/files/file/: interface.rs
core/src/handler/files/json/: interface.rs
core/src/handler/os/: interface.rs  shell.rs
core/src/handler/script/: interface.rs
core/src/logger/: interface.rs
core/src/runtime/: config.rs  extension.rs  flow.rs  history.rs  mod.rs  script.rs  service.rs  supervisor.rs  thread.rs
core/src/script/: bat.rs  interface.rs  ps1.rs  py.rs  sh.rs
core/src/services/: interface.rs
core/src/thread/: flow.rs  mod.rs  script.rs
core/src/tools/: format.rs
core/src/workspace/: interface.rs  mod.rs  project.rs
document/: Developer-engine.md  Flow-file-standard.md  Simx Engine User Document.md
example/conf/: simx.toml
example/ext/simx-http/: extension.json
example/flow/: demo.jsonc
example/flow/init/: test.bp
example/lib/agent-oa/: extension.json
example/lib/agent-oa/api/: user.at
example/script/init/: demo.bat  demo.cmd  hello.py  test.ps1
mcp/: Cargo.toml
mcp/src/: main.rs
runner/: Cargo.toml  build.rs
runner/src/: main.rs
server/: Cargo.toml  build.rs
server/src/: main.rs
server/src/entity/: mod.rs
server/src/restful/: basic.rs  mod.rs
server/src/restful/handler/: engine.rs  flow.rs  mod.rs  test.rs
share/: Cargo.toml
share/src/entity/: common.rs  extension.rs  mod.rs  restful.rs  services.rs  workspace.rs
share/src/entity/config/: cron.rs  engine.rs  env.rs  mod.rs  net.rs
share/src/entity/exception/: common.rs  dispatch.rs  engine.rs
share/src/entity/flow/: blueprint.rs  flow.rs  node.rs
