[workspace]
resolver = "2"

members = [
    # 共用部分，simx项目中的插件均引用此模块
    "core",
    # 引擎可执行运行环境
    # 此模块一般用于随附的执行器（运行时），因此需尽可能保持最小大小，不含 restful 等功能
    "runner",
    # 引擎可执行 Restful 服务
    "server",
    # 引擎库，编译为库文件，便于集成到其他程序中
    # Quantum MCP Server 实现
    "mcp",
    # 如果不需要引擎库，则无需编译此模块
    "library",
    # 结构体，插件可以仅引用此模块
    "share",
]

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = "s"
strip = true
