[package]
name = "engine"
version = "0.9.3"
edition = "2021"
build = "build.rs"


[dependencies]
# 公共模块
engine-common = { path = "../core" }
# 异步运行时库
tokio = { version = "1.39.2", features = ["full"] }

# 仅x86_64平台下加载
[target.'cfg(target_arch = "x86_64")'.dependencies]

# 仅ARM64平台下加载（如新版本的mac）
[target.'cfg(target_arch = "aarch64")'.dependencies]

[target.'cfg(windows)'.build-dependencies]
# Windows 下资源打包
winres = "0.1.12"
