[package]
name = "runner"
version = "1.0.0"
edition = "2024"
build = "build.rs"
authors = [
    "ZhaoShenWen"
]


[dependencies]
# 公共模块
engine-common = { path = "../core" }
# 异步运行时库
tokio = { version = "1.39.2", features = ["full"] }

[target.'cfg(windows)'.build-dependencies]
# Windows 下资源打包
winres = "0.1.12"