[package]
name = "server"
version = "1.0.0"
edition = "2024"
build = "build.rs"


[dependencies]
# 公共模块
engine-common = { path = "../core" }
engine-share = { path = "../share" }
# 异步运行时库
tokio = { version = "1.39.2", features = ["full"] }
axum = "0.8.3"

# 仅x86_64平台下加载
[target.'cfg(target_arch = "x86_64")'.dependencies]

# 仅ARM64平台下加载（如新版本的mac）
[target.'cfg(target_arch = "aarch64")'.dependencies]

[target.'cfg(windows)'.build-dependencies]
# Windows 下资源打包
winres = "0.1.12"

