[package]
name = "server"
version = "1.0.0"
edition = "2024"
build = "build.rs"


[dependencies]
# 引擎核心
engine-common = { path = "../core" }
# 异步运行时库
tokio = { version = "1.39.2", features = ["full"] }
axum = "0.8.3"
serde_json = "1.0.124"
# 序列化和反序列化数据
serde = { version = "1.0.207", features = ["derive"] }
# serde 的派生宏
serde_derive = "1.0.207"

[target.'cfg(windows)'.build-dependencies]
# Windows 下资源打包
winres = "0.1.12"

